# deepseek-api

./: Cargo.toml  README.md
deepseek-api-macros/: Cargo.toml
deepseek-api-macros/src/: lib.rs
examples/: interactive_tool_calls.rs  simple_message.rs  streaming_reasoner.rs
src/: client.rs  config.rs  delta.rs  lib.rs  message.rs  request.rs  stream.rs  tool.rs
src/api/request/: mod.rs
src/api/response/: no_streaming.rs  streaming.rs  user_balance.rs
src/http/: mod.rs
src/http/request/: message.rs  mod.rs
src/http/response/: no_streaming.rs  streaming.rs  user_balance.rs
src/request/: message.rs  mod.rs
src/response/: fields.rs  mod.rs  no_streaming.rs  streaming.rs  user_balance.rs
