[package]
name = "deepseek-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["deepseek-api-macros"]
resolver = "3"

[dependencies]
deepseek-api-macros = { path = "deepseek-api-macros" }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.52.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"

[dev-dependencies]
colored = "3.1.1"
tokio = { version = "1.52.1", features = ["full"] }
